force-app/main/default/objects/Result_Record_Types__c/Result_Record_Types__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Result Record Types</label>
</CustomObject>