force-app/main/default/objects/Result_Record_Types__c/fields/Blood_Test_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Blood_Test_Result_Type__c</fullName>
    <label>Blood Test Result Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>