force-app/main/default/objects/Result_Record_Types__c/fields/Infectious_Screen_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Infectious_Screen_Result_Type__c</fullName>
    <label>Infectious Screen Result Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>