force-app/main/default/objects/Result_Record_Types__c/fields/Pregnancy_Scan_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Scan_Record_Type__c</fullName>
    <label>Pregnancy Scan Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>