force-app/main/default/objects/Result_Record_Types__c/fields/Scan_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Scan_Result_Type__c</fullName>
    <label>Scan Result Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>